--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Esto es un cambio</h1>
+    <h1>Esto es un cambio2</h1>
     <h2>Esto es un segundo cambio</h2>
 </body>
 </html>
